--- a/css/styles.css
+++ b/css/styles.css
@@ -190,7 +190,11 @@ ul{
     display: flex;
     flex-direction: column;
     width: 400px;
-   border:3px solid red;
+    background-image: url(Fondo\ cool.jpg);
+    border:3px solid red;
+    margin:20px;
+    padding:100px;
+    color:white;
 }
 .greeting{
     text-align:center;
